# easy2hard-jepa

./: .gitignore  Makefile  README.md
DynaJEPA-STL10/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
DynaJEPA-STL10/configs/: stl10_baseline.yaml  stl10_curriculum.yaml
DynaJEPA-STL10/scripts/: export_features.py  knn_eval.py  linear_probe.py  pretrain.py  visualize_tsne.py
DynaJEPA-STL10/src/dynajepa/: __init__.py
DynaJEPA-STL10/src/dynajepa/data/: __init__.py  stl10.py
DynaJEPA-STL10/src/dynajepa/daw/: difficulty.py  weighting.py
DynaJEPA-STL10/src/dynajepa/evals/: knn.py  viz.py
DynaJEPA-STL10/src/dynajepa/models/: __init__.py
DynaJEPA-STL10/src/dynajepa/training/: trainer.py
DynaJEPA-STL10/src/dynajepa/utils/: config.py
configs/: stl10_daw_softmax.yaml  stl10_small_smoketest.yaml
notebooks/: colab_stl10_dynajepa.ipynb
scripts/: _path_setup.py  export_features.py  knn_eval.py  linear_probe.py  pretrain.py  smoke_test.py  visualize_tsne.py  visualize_umap.py
src/dynajepa/data/: __init__.py  stl10.py
src/dynajepa/daw/: __init__.py  curriculum.py
src/dynajepa/evals/: __init__.py  linear_probe.py
src/dynajepa/models/: encoder_resnet.py  jepa.py  predictor.py  projector.py
src/dynajepa/training/: __init__.py  ema.py
src/dynajepa/utils/: __init__.py  checkpoint.py  distributed.py  logging.py  seed.py
