[project]
name = "dynajepa-stl10"
version = "0.1.0"
description = "Self-supervised JEPA training with difficulty-aware weighting on STL-10"
readme = "README.md"
authors = [{ name = "DynaJEPA Team" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "torch>=2.3",
    "torchvision>=0.18",
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "tensorboard",
    "tqdm",
    "pyyaml",
    "umap-learn",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
